fixed double scroll bar

--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ html, body {
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
+  overflow: hidden; /* Prevent page-level scrolling */
 }
 
 #header {
